# ruler_light

./: .gitignore  README.md  config_models.sh  config_tasks.sh  gen_data.sh  old_run_server.sh  pyproject.toml  run_eval.sh  setup.py
data/: prepare.py  template.py  tokenizer.py
data/synthetic/: common_words_extraction.py  constants.py  freq_words_extraction.py  niah.py  qa.py  variable_tracking.py
eval/: evaluate.py
pred/: call_api.py
utils/: manifest_utils.py
